crates/tessera-emit/tests/snapshots/quill__json-cloud-quickstart-json.snap
---
source: crates/tessera-emit/tests/quill.rs
expression: text
---
{
  "schemaVersion": 1,
  "format": "tessera-page",
  "build": "cloud",
  "path": "quickstart.md",
  "route": "/quickstart/",
  "site": "https://docs.quill.dev",
  "title": "Try Quill in the browser",
  "frontmatter": {
    "description": "Run Quill in the browser with no local setup.",
    "title": "Try Quill in the browser"
  },
  "availability": null,
  "headings": [
    {
      "level": 2,
      "text": "Try in the browser",
      "id": "try-in-browser",
      "sourceId": "try-in-browser",
      "explicit": true,
      "source": {
        "file": "quickstart.md",
        "span": [100, 121],
        "lines": [6, 6]
      }
    }
  ],
  "assets": [
    {
      "source": "playground.png",
      "path": "playground.png",
      "reference": "./playground.png",
      "kind": "image",
      "fragment": null,
      "writtenIn": "quickstart.md",
      "span": [213, 263]
    }
  ],
  "blocks": [
    {
      "type": "heading",
      "level": 2,
      "id": "try-in-browser",
      "sourceId": "try-in-browser",
      "explicit": true,
      "text": "Try in the browser",
      "inlines": [
        {
          "type": "text",
          "value": "Try in the browser",
          "span": [103, 121]
        }
      ],
      "source": {
        "file": "quickstart.md",
        "span": [100, 121],
        "lines": [6, 6]
      }
    },
    {
      "type": "directive",
      "name": "id",
      "attributes": [],
      "title": null,
      "primary": {
        "kind": "identifier",
        "text": "try-in-browser"
      },
      "binding": "heading",
      "annotation": null,
      "source": {
        "file": "quickstart.md",
        "span": [122, 141],
        "lines": [7, 7]
      }
    },
    {
      "type": "paragraph",
      "inlines": [
        {
          "type": "text",
          "value": "Open the playground at play.quill.dev and paste a page of your docs.",
          "span": [143, 211]
        }
      ],
      "source": {
        "file": "quickstart.md",
        "span": [143, 211],
        "lines": [9, 9]
      }
    },
    {
      "type": "paragraph",
      "inlines": [
        {
          "type": "image",
          "destination": "playground.png",
          "title": null,
          "target": {
            "type": "asset",
            "source": "playground.png",
            "path": "playground.png",
            "reference": "./playground.png",
            "url": null,
            "fragment": null
          },
          "alt": "The Quill playground",
          "attributes": [
            {
              "key": "width",
              "values": ["600"]
            }
          ],
          "span": [213, 263]
        }
      ],
      "source": {
        "file": "quickstart.md",
        "span": [213, 263],
        "lines": [11, 11]
      },
      "links": [
        {
          "span": [213, 263],
          "kind": "image",
          "destination": "playground.png",
          "target": {
            "type": "asset",
            "source": "playground.png",
            "path": "playground.png",
            "reference": "./playground.png",
            "url": null,
            "fragment": null
          }
        }
      ]
    },
    {
      "type": "paragraph",
      "inlines": [
        {
          "type": "text",
          "value": "To keep your changes, ",
          "span": [265, 287]
        },
        {
          "type": "link",
          "destination": "/install-agent/",
          "title": null,
          "target": {
            "type": "page",
            "page": "install-agent.md",
            "id": null,
            "url": "/install-agent/",
            "textFilled": false
          },
          "children": [
            {
              "type": "text",
              "value": "install the agent",
              "span": [288, 305]
            }
          ],
          "span": [287, 324]
        },
        {
          "type": "text",
          "value": ".",
          "span": [324, 325]
        }
      ],
      "source": {
        "file": "quickstart.md",
        "span": [265, 325],
        "lines": [13, 13]
      },
      "links": [
        {
          "span": [287, 324],
          "kind": "link",
          "destination": "install-agent.md",
          "target": {
            "type": "page",
            "page": "install-agent.md",
            "id": null,
            "url": "/install-agent/",
            "textFilled": false
          }
        }
      ]
    }
  ]
}
