crates/tessera-emit/tests/snapshots/quill__plain-site-keys-md.snap
---
source: crates/tessera-emit/tests/quill.rs
expression: text
---
# API keys

## Create a key

Sign in to Quill Cloud and open **Settings → Keys**.

## Rotate keys

Generate a new key, put it in `quill.yaml`, and restart the agent. To install the agent first, see [Install the agent](https://docs.quill.dev/install-agent/#install-agent).
